--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV === production
+NODE_ENV === developer
 VUE_APP_apiKey=AIzaSyA6GD_zrwOwprLuqz6hfJ4-H7TUI6dENQc
 VUE_APP_authDomain=airport-408db.firebaseapp.com
 VUE_APP_databaseURL=https://airport-408db.firebaseio.com
