--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV === developer
+NODE_ENV === production
 VUE_APP_apiKey=AIzaSyA6GD_zrwOwprLuqz6hfJ4-H7TUI6dENQc
 VUE_APP_authDomain=airport-408db.firebaseapp.com
 VUE_APP_databaseURL=https://airport-408db.firebaseio.com
@@ -6,4 +6,4 @@ VUE_APP_projectId=airport-408db
 VUE_APP_storageBucket=
 VUE_APP_messagingSenderId=883094813901
 VUE_APP_appId=1:883094813901:web:76215a01a4f528b2
-VUE_APP_API_URL=http://5d596a7a6bf39a0014c6d71b.mockapi.io/api/v1/info
+VUE_APP_API_URL=https://34.65.44.222/tam_processes
